# micro-polyaie

./: .gitignore  .gitmodules  CMakeLists.txt  build-llvm.sh  build-polyaie.sh  build.sh  env.sh
include/polyaie/: CMakeLists.txt  InitAllDialects.h  InitAllPasses.h  Utils.h
lib/: CMakeLists.txt
lib/AIE/: AIEAssignBuffers.cpp  AIECoreToStandard.cpp  AIECreateCores.cpp  AIECreateFlows.cpp  AIECreateLocks.cpp  AIECreatePacketFlows.cpp  AIECreatePathfindFlows.cpp  AIEDialect.cpp  AIEFindFlows.cpp  AIEHerdRouting.cpp  AIELocalizeLocks.cpp  AIELowerMemcpy.cpp  AIENetlistAnalysis.cpp  AIENormalizeAddressSpaces.cpp  AIEPathfinder.cpp  AIETokenAnalysis.cpp  AIEVectorOpt.cpp  CMakeLists.txt
lib/Dataflow/: Dataflow.cpp
lib/Support/: Utils.cpp
lib/Transforms/: BufferMemrefResult.cpp  CMakeLists.txt  CodeGenCleanup.cpp  ConvertToDataflow.cpp  DataflowToAIE.cpp  DoubleBuffer.cpp  ExtractMemrefDependency.cpp  FlowPacketToCircuit.cpp  HoistMemrefSubview.cpp  LinkExternKernel.cpp  MaterializeBroadcast.cpp  MemrefArgToResult.cpp  Passes.cpp  Placement.cpp  Postprocess.cpp  ReorderOperations.cpp  SplitTopFunc.cpp  TensorizeMemref.cpp
lib/Translation/: ExportHostKernel.cpp  Exporters.cpp
tools/: CMakeLists.txt
tools/polyaie-opt/: CMakeLists.txt  polyaie-opt.cpp
tools/polyaie-translate/: CMakeLists.txt  polyaie-translate.cpp
tutorial/: compile-4x4.sh  compile-point-wise.sh  compile.sh  dot.sh  gemm-4x4.mlir  gemm-8x8.mlir  gemm-simple.mlir  gemm64_64.mlir  pointwise.mlir  vector.mlir  vectorize.sh
tutorial/tmp-debug/: gemm.host.cpp  gemm.polyaie.mlir  (+1 more)
(+46 files in other folders)
